--- a/manual/Appendix.tex
+++ b/manual/Appendix.tex
@@ -54,16 +54,18 @@ Represents an optional value.
 \subsection{Using \texttt{aout} -- A Concurrency-safe Wrapper for \texttt{cout}}
 
 When using \lstinline^cout^ from multiple actors, output often appears interleaved.
-Moreover, using \lstinline^cout^ from multiple actors -- and thus multiple threads -- in parallel should be avoided, since the standard does not guarantee a thread-safe implementation.
+Moreover, using \lstinline^cout^ from multiple actors -- and thus from multiple threads -- in parallel should be avoided regardless, since the standard does not guarantee a thread-safe implementation.
 
 By replacing \texttt{std::cout} with \texttt{cppa::aout}, actors can achieve a concurrency-safe text output.
 The header \lstinline^cppa/cppa.hpp^ also defines overloads for \texttt{std::endl} and \texttt{std::flush} for \lstinline^aout^, but does not support the full range of ostream operations (yet).
 Each write operation to \texttt{aout} sends a message to a `hidden' actor (keep in mind, sending messages from actor constructors is not safe).
 This actor only prints lines, unless output is forced using \lstinline^flush^.
+The example below illustrates printing of lines of text from multiple actors (in random order).
 
 \begin{lstlisting}
 #include <chrono>
 #include <cstdlib>
+#include <iostream>
 #include "cppa/cppa.hpp"
 
 using namespace cppa;
@@ -72,17 +74,19 @@ using std::endl;
 int main() {
     std::srand(std::time(0));
     for (int i = 1; i <= 50; ++i) {
-        spawn([i] {
-          aout << "Hi there! This is actor nr. " << i << "!" << endl;
+        spawn<blocking_api>([i](blocking_actor* self) {
+          aout(self) << "Hi there! This is actor nr. "
+                     << i << "!" << endl;
           std::chrono::milliseconds tout{std::rand() % 1000};
-          delayed_send(self, tout, atom("done"));
-          receive(others() >> [i] {
-              aout << "Actor nr. " << i << " says goodbye!" << endl;
+          self->delayed_send(self, tout, atom("done"));
+          self->receive(others() >> [i, self] {
+              aout(self) << "Actor nr. "
+                         << i << " says goodbye!" << endl;
           });
         });
     }
     // wait until all other actors we've spawned are done
-    await_all_others_done();
+    await_all_actors_done();
     // done
     shutdown();
     return 0;
