--- a/manual/Introduction.tex
+++ b/manual/Introduction.tex
@@ -9,18 +9,21 @@ By decoupling concurrently running software components via message passing, the 
 Actors can create -- ``spawn'' -- new actors and monitor each other to build fault-tolerant, hierarchical systems.
 Since message passing is network transparent, the actor model applies to both concurrency and distribution.
 
-When dealing with dozens of cores, mutexes, semaphores and thread primitives are the wrong level of abstraction.
+When dealing with dozens of cores, mutexes, semaphores and other threading primitives are the wrong level of abstraction.
 Implementing applications on top of those primitives has proven challenging and error-prone.
-Additionally, mutex-based implementations can cause queueing and unmindful sharing can lead to false sharing -- both decreasing performance significantly, up to the point that an application actually runs when adding more cores.
+Additionally, mutex-based implementations can cause queueing and unmindful access to (even distinct) data from separate threads in parallel can lead to false sharing -- both decreasing performance significantly, up to the point that an application actually runs slower when adding more cores.
 
 The actor model has gained momentum over the last decade due to its high level of abstraction and its ability to make efficient use of multicore and multiprocessor machines.
 However, the actor model has not yet been widely adopted in the native programming domain.
-With \libcppa, we contribute a library for actor programming in C++ as open source software to ease development of concurrent as well as distributed software without sacrificing performance.
+With \libcppa, we contribute a library for actor programming in C++ as open source software to ease native development of concurrent as well as distributed systems.
+In this regard, \libcppa follows the C++ philosophy ``building the highest abstraction possible without sacrificing performance''.
 
 \subsection{Terminology}
 
 You will find that \libcppa has not simply adopted exiting implementations based on the actor model such as Erlang or the Akka library.
-Instead, \libcppa aims to provide an modern C++ API allowing for type-safe messaging.
+Instead, \libcppa aims to provide a modern C++ API allowing for type-safe as well as dynamically typed messaging.
+Hence, most aspects of our system are familiar to developers having experience with other actor systems, but there are also slight differences in terminology.
+However, neither \libcppa nor this manual require any foreknowledge.
 
 \subsubsection{Actor Address}
 
@@ -35,6 +38,18 @@ An actor handle contains the address of an actor along with its type information
 In order to send an actor a message, one needs to have a handle to it -- the address alone is not sufficient.
 The distinction between handles and addresses -- which is unique to \libcppa when comparing it to other actor systems -- is a consequence of the design decision to support both untyped and typed actors.
 
+\subsubsection{Untyped Actors}
+
+An untyped actor does not constrain the type of messages it receives, i.e., a handle to an untyped actor accepts any kind of message.
+That does of course not mean that untyped actors must handle all possible types of messages.
+Choosing typed vs untyped actors is mostly a matter of taste.
+Untyped actors allow developers to build prototypes faster, while typed actors allow the compiler to fetch more errors at compile time.
+
+\subsubsection{Typed Actor}
+
+A typed actor defines its messaging interface, i.e., both input and output types, in its type.
+This allows the compiler to check message types statically.
+
 \subsubsection{Spawning}
 
 ``Spawning'' an actor means to create and run a new actor.
@@ -45,7 +60,7 @@ The distinction between handles and addresses -- which is unique to \libcppa whe
 A monitored actor sends a ``down message'' to all actors monitoring it as part of its termination.
 This allows actors to supervise other actors and to take measures when one of the supervised actors failed, i.e., terminated with a non-normal exit reason.
 
-\subsubsection{Links}
+\subsubsection{Link}
 
 A link is bidirectional connection between two actors.
 Each actor sends an ``exit message'' to all of its links as part of its termination.
