--- a/manual/NetworkTransparency.tex
+++ b/manual/NetworkTransparency.tex
@@ -6,7 +6,7 @@ Remote actors are represented by actor proxies that forward all messages.
 \subsection{Publishing of Actors}
 
 \begin{lstlisting}
-void publish(actor_ptr whom, std::uint16_t port, const char* addr = 0)
+void publish(actor whom, std::uint16_t port, const char* addr = 0)
 \end{lstlisting}
 
 The function \lstinline^publish^ binds an actor to a given port.
@@ -16,7 +16,7 @@ Otherwise, the actor accepts all incoming connections (\lstinline^INADDR_ANY^).
 
 \begin{lstlisting}
 publish(self, 4242);
-become (
+self->become (
   on(atom("ping"), arg_match) >> [](int i) {
     return make_cow_tuple(atom("pong"), i);
   }
@@ -26,7 +26,7 @@ become (
 \subsection{Connecting to Remote Actors}
 
 \begin{lstlisting}
-actor_ptr remote_actor(const char* host, std::uint16_t port)
+actor remote_actor(const char* host, std::uint16_t port)
 \end{lstlisting}
 
 The function \lstinline^remote_actor^ connects to the actor at given host and port.
@@ -34,12 +34,12 @@ A \lstinline^network_error^ is thrown if the connection failed.
 
 \begin{lstlisting}
 auto pong = remote_actor("localhost", 4242);
-send(pong, atom("ping"), 0);
-become (
-  on(atom("pong"), 10) >> [] {
+self->send(pong, atom("ping"), 0);
+self->become (
+  on(atom("pong"), 10) >> [=] {
     self->quit();
   },
-  on(atom("pong"), arg_match) >> [](int i) {
+  on(atom("pong"), arg_match) >> [=](int i) {
     return make_cow_tuple(atom("ping"), i+1);
   }
 );
