--- a/manual/SendingMessages.tex
+++ b/manual/SendingMessages.tex
@@ -1,7 +1,8 @@
 \section{Sending Messages}
 \label{Sec::Send}
 
-Messages can be sent by using \lstinline^send^, \lstinline^send_tuple^, or \lstinline^operator<<^. The variadic template function \lstinline^send^ has the following signature.
+Messages can be sent by using the member function \lstinline^send^ or \lstinline^send_tuple^.
+The variadic template function \lstinline^send^ has the following signature.
 
 \begin{lstlisting}
 template<typename... Args>
@@ -9,41 +10,31 @@ void send(actor whom, Args&&... what);
 \end{lstlisting}
 
 The variadic template pack \lstinline^what...^ is converted to a dynamically typed tuple (see Section \ref{Sec::Tuples::DynamicallyTypedTuples}) and then enqueued to the mailbox of \lstinline^whom^.
-The following example shows two equal sends, one using \lstinline^send^ and the other using \lstinline^operator<<^.
-
-\begin{lstlisting}
-actor other = spawn(...);
-send(other, 1, 2, 3);
-other << make_any_tuple(1, 2, 3);
-\end{lstlisting}
 
 Using the function \lstinline^send^ is more compact, but does not have any other benefit.
 However, note that you should not use \lstinline^send^ if you already have an instance of \lstinline^any_tuple^, because it creates a new tuple containing the old one.
 
 \begin{lstlisting}
-actor other = spawn(...);
-auto msg = make_any_tuple(1, 2, 3);
-send(other, msg); // oops, creates a new tuple that contains msg
-send_tuple(other, msg); // ok
-other << msg; // ok
+void some_fun(event_based_actor* self) {
+  actor other = spawn(...);
+  auto msg = make_any_tuple(1, 2, 3);
+  self->send(other, msg); // oops, creates a new tuple containing msg
+  self->send_tuple(other, msg); // ok
+}
 \end{lstlisting}
-
-The function \lstinline^send_tuple^ is equal to \lstinline^operator<<^.
-Choosing one or the other is merely a matter of personal preferences.
 
 \clearpage
 \subsection{Replying to Messages}
 \label{Sec::Send::Reply}
 
 The return value of a message handler is used as response message.
-During callback invocation, \lstinline^self->last_sender()^ is set to the address of the sender.
-Actors can also use the result of a \lstinline^send^ to answer to a request, as shown below.
+Actors can also use the result of a \lstinline^sync_send^ to answer to a request, as shown below.
 
 \begin{lstlisting}
-void client(const actor& master) {
+void client(event_based_actor* self, const actor& master) {
   become (
     on("foo", arg_match) >> [=](const string& request) -> string {
-      return sync_send(master, atom("bar"), request).then(
+      return self->sync_send(master, atom("bar"), request).then(
         on_arg_match >> [=](const std::string& response) {
           return response;
         }
@@ -59,20 +50,23 @@ Messages can be delayed, e.g., to implement time-based polling strategies, by us
 The following example illustrates a polling strategy using \lstinline^delayed_send^.
 
 \begin{lstlisting}
-delayed_send(self, std::chrono::seconds(1), atom("poll"));
-become (
-  on(atom("poll")) >> []() {
-    // poll a resource...
-    // schedule next polling
-    delayed_send(self, std::chrono::seconds(1), atom("poll"));
-  }
-);
+behavior poller(event_based_actor* self) {
+  self->delayed_send(self, std::chrono::seconds(1), atom("poll"));
+  return {
+    on(atom("poll")) >> [] {
+      // poll a resource
+      // ...
+      // schedule next polling
+      self->delayed_send(self, std::chrono::seconds(1), atom("poll"));
+    }
+  };
+}
 \end{lstlisting}
 
 \clearpage
-\subsection{Forwarding Messages}
+\subsection{Forwarding Messages in Untyped Actors}
 
-The function \lstinline^forward_to^ forwards the last dequeued message to an other actor.
+The member function \lstinline^forward_to^ forwards the last dequeued message to an other actor.
 Forwarding a synchronous message will also transfer responsibility for the request, i.e., the receiver of the forwarded message can reply as usual and the original sender of the message will receive the response.
 The following diagram illustrates forwarding of a synchronous message from actor \texttt{B} to actor \texttt{C}.
 
