updated documentation, updated ChangeLog

--- a/manual/Appendix.tex
+++ b/manual/Appendix.tex
@@ -21,7 +21,7 @@ Represents an optional value.
   \lstinline^type^ & \lstinline^T^ \\
   \hline
   \\
-  \multicolumn{2}{l}{\large{\textbf{Member functions}}\vspace{3pt}} \\
+  \multicolumn{2}{l}{\large{\textbf{Member Functions}}\vspace{3pt}} \\
   \hline
   \lstinline^option()^ & Constructs an empty option \\
   \hline
