--- a/manual/FirstSteps.tex
+++ b/manual/FirstSteps.tex
@@ -47,8 +47,9 @@ Please submit a bug report that includes (a) your compiler version, (b) your OS,
 \item Linux
 \item Mac OS X
 \item \textit{Note for MS Windows}:
-\libcppa relies on C++11 features such as variadic templates.
+\libcppa relies on C++11 features such as unrestricted unions.
 We will support this platform as soon as Microsoft's compiler implements all required C++11 features.
+In the meantime, libcppa can be used with MinGW.
 \end{itemize*}
 
 \clearpage
