--- a/manual/GroupCommunication.tex
+++ b/manual/GroupCommunication.tex
@@ -26,7 +26,22 @@ The \lstinline^"local"^ group module creates groups for in-process communication
 For example, a group for GUI related events could be identified by \lstinline^group::get("local", "GUI events")^.
 The group ID \lstinline^"GUI events"^ uniquely identifies a singleton group instance of the module \lstinline^"local"^.
 
-\subsection{Spawn Actors in Groups}
+\subsection{Remote Groups}
+\label{Sec::Group::RemoteGroups}
+
+To deploy groups in a network, one host can act as group server by publishing its local groups at any given port:
+
+\begin{lstlisting}
+void publish_local_groups(std::uint16_t port, const char* addr)
+\end{lstlisting}
+
+By calling \lstinline^group::get("remote", "<group>@<host>:<port>")^, other hosts are now able to connect to a remotely running group.
+Please note that the group communication is no longer available once the server disconnects.
+This implementation uses N-times unicast underneath.
+It is worth mentioning that user-implemented groups can be build on top of IP multicast or overlay technologies such as Scribe to achieve better performance or reliability.
+
+\clearpage
+\subsection{Spawning Actors in Groups}
 \label{Sec::Group::Spawn}
 
 The function \lstinline^spawn_in_group^ can be used to create actors as members of a group.
