--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -45,7 +45,7 @@
 %BEGIN LATEX
 \texttt{\huge{\textbf{libcppa}}}\\~\\A C++ library for actor programming\\~\\~\\~\\%
 %END LATEX
-User Manual\\\normalsize{\texttt{libcppa} version 0.9.0} PRERELEASE\vfill}
+User Manual\\\normalsize{\texttt{libcppa} version 0.9.0}\vfill}
 
 \author{Dominik Charousset}
 
@@ -124,6 +124,7 @@ User Manual\\\normalsize{\texttt{libcppa} version 0.9.0} PRERELEASE\vfill}
 \include{SpawningActors}
 \include{MessagePriorities}
 \include{NetworkTransparency}
+\include{NetworkIO}
 \include{GroupCommunication}
 \include{ActorCompanions}
 \include{TypeSystem}
